# gogh-rpc

./: README.md  pyproject.toml
src/gogh_rpc/: __init__.py  __main__.py  parser.py  pillow.py  presence.py  watcher.py
