[project]
name = "gogh-rpc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marco Lee", email = "ylee0147@student.monash.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.0.0",
    "pyinstaller>=6.16.0",
    "pypresence>=4.6.1",
    "watchdog>=6.0.0",
]

[project.scripts]
gogh-rpc = "gogh_rpc:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
